# databricks_mcp

./: main.py  pyproject.toml
0-Basic_call/: mcp_call.py
0-Basic_call/LangChainMcp/: lang_mcp_tool.py
